--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -19,8 +19,13 @@ jobs:
 
       # Used to build the wheels
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.17.0
-        # cibuildwheel automatically detects setup.py and builds for all python versions
+        uses: pypa/cibuildwheel@v2.23.0
+        env:
+          # Build for Python 3.10, 3.11, 3.12, and 3.13
+          CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-*"
+
+          # Optional: Skip 32-bit builds if you don't want them (saves time)
+          CIBW_SKIP: "*-win32 *-manylinux_i686"
 
       - uses: actions/upload-artifact@v4
         with:
