--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.0
         env:
-          # Build for Python 3.10, 3.11, 3.12, and 3.13
-          CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-*"
+          # Build for Python 3.10, 3.11, 3.12, 3.13, and 3.14
+          CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-* cp314-*"
 
-          # Optional: Skip 32-bit builds if you don't want them (saves time)
+          # Skip 32 bit builds to save time
           CIBW_SKIP: "*-win32 *-manylinux_i686"
 
       - uses: actions/upload-artifact@v4
