--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -24,11 +24,8 @@ jobs:
 
       # Used to build the wheels
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.23.0
+        uses: pypa/cibuildwheel@stable
         env:
-          # Build for Python 3.10, 3.11, 3.12, 3.13, and 3.14
-          CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-* cp314-*"
-
           # Skip 32 bit builds to save time
           CIBW_SKIP: "*-win32 *-manylinux_i686"
 
