--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Used to build the wheels
       - name: Build wheels
-        uses: pypa/cibuildwheel@stable
+        uses: pypa/cibuildwheel@latest
         env:
           # Skip 32 bit builds to save time
           CIBW_SKIP: "*-win32 *-manylinux_i686"
